Fixed overflow with giant logo on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -90,12 +90,18 @@ h1, h2, h3, h4, h5, h6 {
   background-size: cover;
 }
 
-#top .hero-logo {
+#top .top-logo {
   margin: 20px;
 }
 
-#top .hero-logo img {
+#top .top-logo img {
   max-width: 100%;
+}
+
+@media (max-width: 768px) {
+  #top .top-logo img {
+    max-width: 50%;
+  }
 }
 
 #top .top-container {
@@ -170,9 +176,9 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #header {
   background: black;
-  padding: 15px 0;
-  height: 55px;
-  margin-top: -80px;
+  padding: 10px 0;
+  height: 40px;
+  margin-top: -60px;
 }
 
 #header #logo {
@@ -294,7 +300,7 @@ h1, h2, h3, h4, h5, h6 {
 /* Nav Meu Container */
 #nav-menu-container {
   float: right;
-  margin: 5px 0;
+  /*margin: 5px 0;*/
 }
 
 @media (max-width: 768px) {
